# capagru_python

./: app.py  commit.b.sh  database.sqlite  pyproject.toml  test.sqlite
templates/: 404.html  change_username.html  encrypt_pw.js  home.html  homepage.html  index.html  login.html  my_page.html  package-lock.json  send_email.html  signup.html  signup_save.html  success_co.html  success_signin.html  success_signup.html  test.js  test1.js
