[tool.poetry]
name = "capagru-python"
version = "0.1.0"
description = ""
authors = ["bussiere <bussiere@gmail.com>"]
readme = "README.md"
packages = [{include = "capagru_python"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
