[tool.poetry]
name = "capagru-python"
version = "0.1.0"
description = ""
authors = ["bussiere <bussiere@gmail.com>"]
readme = "README.md"
packages = [{include = "capagru_python"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
